--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -1,12 +1,14 @@
 <div class="card">
-  <%= link_to image_tag(prototype.image, class: :card__img ), root_path%>
+<%= link_to prototype_path(prototype.id),method: :get do %>
+ <%= image_tag prototype.image.variant(resize: '300x300'), class: :card__img if prototype.image.attached? %>
+ <% end %>
 
   <div class="card__body">
-    <%= link_to prototype.title, root_path, class: :card__title %>
+    <%= link_to prototype.title, prototype_path(prototype.id), class: :card__title %>
 
      <p class="card__summary">
       <%= prototype.catch_copy %> 
      </p>
-   <%= link_to "by #{prototype.user.name}", root_path, class: :card__user %>
+   <%= link_to "by #{prototype.user.name}", "/users/#{prototype.user.id}", class: :card__user %>
   </div>
 </div>
