--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -2,9 +2,9 @@
   <div class="inner">
     <div class="prototype__wrapper">
       <p class="prototype__hedding">
-        <%= "プロトタイプのタイトル"%>
+        <%= @prototype.title %>
       </p>
-      <%= link_to @prototype.user.name, root_path, class: :prototype__user %> 
+      <%= link_to @prototype.user.name, user_path(@prototype.user), class: :prototype__user %> 
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
       <% if user_signed_in? && current_user.id == @prototype.user_id %>
         <div class="prototype__manage">
@@ -51,7 +51,7 @@
               <li class="comments_list">
                 <%= comment.text%>
               </li>
-              <%= link_to @prototype.user.name, "/users/#{comment.user_id}", class: :comment_user %>
+              <%= link_to comment.user.name, "/users/#{comment.user_id}", class: :comment_user %>
             <% end %>
           </li>
           <%# // 投稿に紐づくコメントを一覧する処理を記述する %>
